objects/governingtest__c.object
<CustomObject>
    <fields>
        <fullName>asd__c</fullName>
        <label>asd</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>asdf__c</fullName>
        <label>asdf</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>checkit__c</fullName>
        <defaultValue>true</defaultValue>
        <label>checkit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>test2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>test2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>test_area_long__c</fullName>
        <label>test area long</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>testcalender__c</fullName>
        <label>testcalender</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>testcurrency__c</fullName>
        <label>testcurrency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>testdate__c</fullName>
        <label>testdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>testmail__c</fullName>
        <label>testmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>testmultilist__c</fullName>
        <label>testmultilist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
                <value>
                    <fullName>b</fullName>
                </value>
                <value>
                    <fullName>c</fullName>
                </value>
                <value>
                    <fullName>d</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>testnumber__c</fullName>
        <label>testnumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>testpercent__c</fullName>
        <label>testpercent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>testphone__c</fullName>
        <label>testphone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>testpicklist__c</fullName>
        <label>testpicklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                    <default>true</default>
                    <label>a</label>
                </value>
                <value>
                    <fullName>b</fullName>
                </value>
                <value>
                    <fullName>c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>testtext__c</fullName>
        <label>testtext</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testtextarea__c</fullName>
        <label>testtextarea</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>testurl__c</fullName>
        <label>testurl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>textarearich__c</fullName>
        <label>textarearich</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>governingtest</label>
    <nameField>
        <label>governingtest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>governingtest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>